--- a/dmn_menu_container.html
+++ b/dmn_menu_container.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <section class="h_one">
-            <article><a href="./dmn_main.html" class="logo"></a></article>
+            <article><a href="./index.html" class="logo"></a></article>
             <article class="promotion">
                 <div></div>
                 <p>주변 매장의 프로모션을 확인해보세요!</p>
